ecs-service.tf
resource "aws_ecs_service" "go-uptime-monitor-ecs-service" {
  name = "go-uptime-monitor-ecs-service"
}
